cleaned code and fixed button size issue when text wraps in shows by giving it a height

--- a/sprint-3/stylesheets/partials/_mixins.scss
+++ b/sprint-3/stylesheets/partials/_mixins.scss
@@ -342,6 +342,7 @@
 @mixin btn {
     .btn {
         background-color: $black;
+        max-height: 90px;
         color: $white;
         outline: none;
         border-radius: 7px;
@@ -399,8 +400,7 @@
                     align-items: flex-end;
                     > *:first-child { flex-shrink: 2}
                     > *:last-child {flex-basis: 45%; flex-shrink: 1}
-                 } 
-                
+                }    
             }
         }
     }  
